# loqui-tts

./: .gitignore  README.md  pyproject.toml  setup.sh  start.py  start.sh
backend/: config.py  dependencies.py  download_models.py  main.py
backend/api/: audio.py  history.py  models.py  router.py  system.py  tts.py  ws.py
backend/db/: database.py  models.py
backend/schemas/: history.py  models.py  tts.py
backend/services/: audio_store.py  device_detector.py  history_service.py  model_manager.py  tts_engine.py
backend/utils/: exceptions.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend-dist/: index.html
frontend-dist/assets/: StatsPanel-CvbCYNQz.js  index-B9g4yNis.js  index-C0b1jhkI.css  index-CbAsTGJw.css  index-DVXuneTx.js  index-mRIEer-J.js  index-n7zux2_S.css
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  history.ts  models.ts  tts.ts  websocket.ts
frontend/src/components/audio/: AudioPlayer.tsx  Waveform.tsx
frontend/src/components/glass/: GlassButton.tsx  GlassCard.tsx  GlassInput.tsx  GlassSelect.tsx  GlassSlider.tsx
frontend/src/components/history/: HistoryCard.tsx  HistoryPanel.tsx  StatsDashboard.tsx
frontend/src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx
frontend/src/components/stats/: StatsPanel.tsx
frontend/src/components/tts/: GenerateButton.tsx  GeneratingAnimation.tsx  GenerationStatus.tsx  LanguageSelector.tsx  ModelSelector.tsx  ParameterPanel.tsx  TextInput.tsx  VoiceUpload.tsx
frontend/src/components/ui/: InfoTip.tsx  Toast.tsx  Tooltip.tsx
frontend/src/hooks/: useAudioPlayer.ts  useHistory.ts  useModels.ts  useWebSocket.ts
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  formatters.ts
